--- a/projects/intermediateProjectSite/css/style.css
+++ b/projects/intermediateProjectSite/css/style.css
@@ -6,16 +6,23 @@
 
 .nav {
     background-color: #ececec;
-    width: 100%;
+    color: #363636;
+
+    font-family: 'Barlow Semi Condensed', sans-serif;
+
+    width: 200px;;
     height: 100%;
+    
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
-    left: 0;
-    z-index: 0;
-    color: #363636;
-    font-family: 'Barlow Semi Condensed', sans-serif;  
+    left: -200px;
+   
+    z-index: 3;
+
+    transition: left 0.3s;
+    -webkit-transition: left 0.3s;
 }
 
 .nav ul {
@@ -32,6 +39,7 @@
 .nav h4 {
     margin: 0;
     margin-left: 15px;
+    margin-bottom: 100px;
 }
 
 .name-font,
@@ -53,10 +61,6 @@
 
 .fcc-font:hover {
     color: green;
-}
-
-.fa-free-code-camp {
-    margin-bottom: 75px;
 }
 
 .current-nav {
@@ -95,13 +99,15 @@
 }
 
 label[for="nav-toggle"]{
-    position: fixed;
-    top: 25px;
-    left: 35px;
-    z-index: 2;
-    
     width: 30px;
     height: 30px;
+    
+    position: fixed;
+    top: 25px;
+    left: 25px;
+    
+    z-index: 2;
+    
     cursor: pointer;
 
     color: #fff;
@@ -114,7 +120,6 @@ input[type=checkbox]:checked + label i
 }
 
 input[type=checkbox]:checked + label i {
-    -ms-transform: rotate(90deg);
     -webkit-transform: rotate(90deg);
     transform: rotate(90deg);
 }
@@ -126,19 +131,16 @@ input[type=checkbox]:checked + label i {
 *************************************************************/
 
 .nav-toggle:checked + label {
-    left: 235px;
+    left: 225px;
 }
 
-.nav-toggle:checked ~ .content {
-    left: 200px;
-}
-
-.nav-toggle:checked ~ .content .icon {
-    left: 55%;
+.nav-toggle:checked ~ .nav {
+    left: 0;
 }
 
 .nav-toggle + label, .content {
-    transition: left 0.2s;
+    transition: left 0.3s;
+    -webkit-transition: left 0.3s;
 }
 
 /************************************************************
@@ -435,7 +437,7 @@ button:active {
 }
 
 .icon {
-    position: fixed;
+    position: absolute;
     top: 40%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -463,25 +465,246 @@ button:active {
 
 /************************************************************
 *
-*           MEDIA QUERIES
+*           WIKI VIEWER LAYOUT & STYLES
 *
 *************************************************************/
 
-@media only screen and (max-device-width: 850px) {
-  /* LOC WEATHER */
-    .nav-toggle:checked ~ .content .icon {
-        left: 60%;
-    }
+.wiki-container {
+    min-height: 50vh;
 
+    font-size: 2em;
+    font-family: 'Barlow Semi Condensed', sans-serif; 
+    font-style: italic;
+
+    display: -webkit-flex;
+	-webkit-flex-wrap: wrap;
+    display: flex; flex-wrap: wrap;
+    align-content: flex-end;
+    justify-content: center;
 }
 
-@media only screen and (max-device-width: 750px) {
-    /* LOC WEATHER */
-    .nav-toggle:checked ~ .content .icon {
-        left: 65%;
-    }
+ul {
+    list-style: none;
+}
+
+/************************************************************
+*
+*           RANDOM WIKI VIEWER LAYOUT & STYLES
+*
+*************************************************************/
+
+
+.random-wiki {
+    display: -webkit-flex;
+	-webkit-flex-wrap: wrap;
+	display: flex; flex-wrap: wrap;
+    align-content: flex-end;
+    justify-content: center;
+
+    font-size: .75em;
+}
+
+.random-wiki-options {
+    transform-style: preserve-3d;
+    transition: all 1s;
+}
+
+.random-wiki a {
+    color: #818181;
+}
+
+.random-wiki a:hover {
+    color: #c4c4c4;
+}
+
+.random-wiki ul {
+    width: 300px;
+
+    margin: 0;
+    margin-bottom: 35px;
+    padding: 0;
+
+    display: -webkit-flex;
+	-webkit-flex-wrap: wrap;
+	display: flex; flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+}
+
+.random-wiki-options li {
+    width: 300px;
+
+    position: absolute;
+    left: 0%;
+
+    opacity: 0;
     
+    transition: all 1s;
+    backface-visibility: hidden;
 }
+
+/************************************************************
+*
+*           RANDOM WIKI ROTATION
+*
+*************************************************************/
+
+/* create a 3d wheel out of the 6 list items that are 30px spaced vertically */
+.random-wiki-options li:nth-of-type(1) {
+    transform: rotateX(0deg)   translateZ(30px);
+    -webkit-transform: rotateX(0deg)   translateZ(30px);
+}
+.random-wiki-options li:nth-of-type(2) {
+    transform: rotateX(60deg)  translateZ(30px);
+    -webkit-transform: rotateX(60deg)  translateZ(30px);
+}
+.random-wiki-options li:nth-of-type(3) {
+    transform: rotateX(120deg) translateZ(30px);
+    -webkit-transform: rotateX(120deg) translateZ(30px);
+}
+.random-wiki-options li:nth-of-type(4) {
+    transform: rotateX(180deg) translateZ(30px);
+    -webkit-transform: rotateX(180deg) translateZ(30px);
+}
+.random-wiki-options li:nth-of-type(5) {
+    transform: rotateX(240deg) translateZ(30px);
+    -webkit-transform: rotateX(240deg) translateZ(30px);
+}
+.random-wiki-options li:nth-of-type(6) {
+    transform: rotateX(300deg) translateZ(30px);
+    -webkit-transform: rotateX(300deg) translateZ(30px);
+}
+
+/* making sure the current list item shown is opaque */
+.random-wiki-options[data-state="1"] li:nth-of-type(1),
+.random-wiki-options[data-state="2"] li:nth-of-type(2),
+.random-wiki-options[data-state="3"] li:nth-of-type(3),
+.random-wiki-options[data-state="4"] li:nth-of-type(4),
+.random-wiki-options[data-state="5"] li:nth-of-type(5),
+.random-wiki-options[data-state="6"] li:nth-of-type(6) { opacity: 1; }
+
+/************************************************************
+*
+*           SEARCH CONTAINER LAYOUT & STYLES
+*
+*************************************************************/
+
+.search-container {
+    position: relative;
+}
+
+.search-container .search-icon {
+    position: absolute;
+    
+    left: 5px;
+    top: 5px;
+    
+    color: #363636;
+}
+
+.search-container .close-results { 
+    display: none;
+
+    cursor: pointer;
+    
+    position: absolute;
+    
+    right: 10px;
+    top: 5px;
+    
+    color: #363636;
+}
+
+.close-results:hover {
+    color: #4b4b4b;
+}
+
+.search-container label {
+    display: none;
+}
+
+.search-input {
+    height: 40px;
+    width: 300px;
+
+    padding-left: 50px;
+    padding-right: 50px;
+    
+    border: none;
+    border-radius: 20px;
+
+    font-size: .8em;
+}
+
+.search-input:focus {
+    box-shadow: 0 0 5px #c4c4c4;
+}
+
+/************************************************************
+*
+*           SEARCH RESULTS LAYOUT & STYLES
+*
+*************************************************************/
+
+
+.results-container {
+    display: -webkit-flex;
+	-webkit-flex-wrap: wrap;
+	display: flex; flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+
+    font-family: 'Barlow Semi Condensed', sans-serif;
+    font-size: 1.5em;
+}
+
+.search-results {
+    display: -webkit-flex;
+	-webkit-flex-wrap: wrap;
+	display: flex; flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+
+    margin: 0;
+    padding: 0;
+}
+
+.result {
+    width: 75%;
+
+    margin: 15px;
+    margin-top: 30px;
+
+    padding: 0px 20px 0px 20px;
+
+    background-color: #fff;
+
+    text-align: left;
+}
+
+.result h3 {
+    margin-top: 10px;
+    margin-bottom: 5px;
+
+    color: #818181;
+}
+
+.result a:hover h3 {
+    text-decoration: underline;
+}
+
+.result p {
+    margin-top: 0;
+    margin-bottom: 10px;
+
+    color: #363636;
+}
+
+/************************************************************
+*
+*           MEDIA QUERIES
+*
+*************************************************************/
 
 @media only screen and (max-device-width: 640px) {
     
@@ -500,7 +723,10 @@ button:active {
     }
 
     .sml-btn-sec {
-        margin-top: 10px;
+        justify-content: center;
+        
+        margin-top: 25px;
+        margin-right: 0;
     }
 
     .main-btn {
@@ -508,10 +734,6 @@ button:active {
     }
 
     /* LOC WEATHER */
-
-    .nav-toggle:checked ~ .content .icon {
-        left: 68%;
-    }
 
     .temp {
         font-size: 7em;
@@ -521,6 +743,15 @@ button:active {
         top: 35%;
 
         font-size: 3.5em;
+    }
+
+    /* WIKI VIEWER */
+    .result h3 {
+        font-size: .8em;
+    }
+
+    .result p {
+        font-size: .8em;
     }
 } 
 
@@ -539,34 +770,12 @@ button:active {
         font-size: 3em;
     }
 
-    .nav-toggle:checked ~ .content .icon {
-        left: 70%;
+    /* WIKI VIEWER */
+    .result h3 {
+        font-size: .7em;
     }
-}
 
-/* LOC WEATHER */
-
-@media only screen and (max-device-width: 480px) {
-    .nav-toggle:checked ~ .content .icon {
-        left: 75%;
-    }
-}
-
-@media only screen and (max-device-width: 400px) {
-    .nav-toggle:checked ~ .content .icon {
-        left: 80%;
-    }
-}
-
-
-@media only screen and (max-device-width: 340px) {
-    .nav-toggle:checked ~ .content .icon {
-        left: 85%;
-    }
-}
-
-@media only screen and (max-device-width: 300px) {
-    .nav-toggle:checked ~ .content .icon {
-        left: 90%;
+    .result p {
+        font-size: .7em;
     }
 }
