--- a/projects/intermediateProjectSite/css/style.css
+++ b/projects/intermediateProjectSite/css/style.css
@@ -356,6 +356,33 @@ button:active {
     color: #363636;
 }
 
+.loading {
+    position: relative;
+    bottom: 10px;
+
+    font-size: 4em;
+    opacity: 1;
+
+    animation: dots 1s infinite;
+    -webkit-animation: dots 1s infinite;
+}
+
+@keyframes dots {
+    50% {opacity: 0;}
+}
+
+@-webkit-keyframes dots {
+    50% {opacity: 0;}
+}
+
+.loading:nth-child(2) {
+    animation-delay: .2s;
+}
+
+.loading:nth-child(3) {
+    animation-delay: .5s;
+}
+
 /************************************************************
 *
 *           QUOTE GEN BLUR ANIMATION
@@ -670,6 +697,37 @@ ul {
 
     font-family: 'Barlow Semi Condensed', sans-serif;
     font-size: 1.5em;
+}
+
+.searching {    
+    margin-top: 50px;
+
+    color: #fff;
+}
+
+.search-indicator {
+    margin: auto;
+    margin-top: 5px;
+
+    width: 75px;
+    height: 75px;
+
+    border: 15px solid #fff;
+    border-top: 15px solid #818181;
+    border-radius: 50%;
+
+    animation: spin 2s linear infinite;
+    -webkit-animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}
+}
+
+@-webkit-keyframes spin {
+    0% {-webkit-transform: rotate(0deg);}
+    100% {-webkit-transform: rotate(360deg);}
 }
 
 .search-results {
