--- a/projects/calculator/docs/assets/styles/styles.css
+++ b/projects/calculator/docs/assets/styles/styles.css
@@ -355,5 +355,18 @@ template {
 }
 
 .calculator__screen {
-    border: 1px solid #000;
-}
+        height: 100px;
+        border: 2px solid #000;
+    }
+
+.calculator__screen-content {
+            float: right;
+            margin: 5px 15px;
+            font-size: 2rem;
+        }
+
+.calculator__btns button {
+            width: 80px;
+            height: 40px;
+            margin: 5px 8px;
+        }
