--- a/projects/calculator/src/styles/modules/_calculator.css
+++ b/projects/calculator/src/styles/modules/_calculator.css
@@ -1,8 +1,24 @@
 .calculator {
     width: 300px;
     margin: 0 auto;
-}
 
-.calculator__screen {
-    border: 1px solid #000;
+    &__screen {
+        height: 100px;
+        border: 2px solid #000;
+
+        &-content {
+            float: right;
+            margin: 5px 15px;
+            font-size: 2rem;
+        }
+    }
+
+    &__btns {
+
+        & button {
+            width: 80px;
+            height: 40px;
+            margin: 5px 8px;
+        }
+    }
 }
