--- a/projects/calculator/docs/assets/styles/styles.css
+++ b/projects/calculator/docs/assets/styles/styles.css
@@ -345,28 +345,105 @@ template {
     box-sizing: border-box;
 }
 
-.header {
-    text-align: center;
+body {
+    background: #000;
 }
 
 .calculator {
+    position: relative;
+    z-index: 1;
     width: 300px;
-    margin: 0 auto;
+    margin: 2rem auto;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    letter-spacing: .25rem;
 }
 
+@media (min-width: 800px) {
+
+.calculator {
+        margin: 5rem auto
+}
+    }
+
+@media (min-width: 1010px) {
+
+.calculator {
+        margin: 8rem auto
+}
+    }
+
 .calculator__screen {
-        height: 100px;
-        border: 2px solid #000;
+        height: 125px;
+        overflow: auto;
+        border: 1px solid #fff;
+        border-bottom: none;
+        font-size: 2rem;
+        color: #fff;
     }
 
 .calculator__screen-content {
             float: right;
             margin: 5px 15px;
-            font-size: 2rem;
         }
 
-.calculator__btns button {
-            width: 80px;
-            height: 40px;
-            margin: 5px 8px;
+.calculator__btn-container {
+        display: flex;
+        flex-wrap: wrap;
+        align-content: start;
+        justify-content: center;
+        height: 320px;
+        margin: 0 auto;
+        font-size: 1.5rem;
+    }
+
+.calculator__history {
+        color: #fff;
+    }
+
+.calculator__history-title {
+            letter-spacing: 0;
+            font-weight: 300;
+            border-bottom: 1px solid #fff;
+            margin-bottom: 0;
         }
+
+.calculator__history-list {
+            list-style: none;
+            font-size: 1.5rem;
+            padding: 0;
+            margin-top: 0;
+        }
+
+.calculator__history-list li {
+                margin: 10px 10px;
+            }
+
+.btn {
+    color: #fff;
+    background: transparent;
+    border: 1px solid #fff;
+    width: 100px;
+    height: 45px;
+    margin: 0;
+}
+
+.btn:hover {
+        background: rgba(255,255,255,.05);
+    }
+
+.btn--small {
+        width: 50px;
+    }
+
+.btn--large {
+        width: 300px;
+    }
+
+.canvas {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
