--- a/projects/calculator/src/styles/modules/_calculator.css
+++ b/projects/calculator/src/styles/modules/_calculator.css
@@ -1,24 +1,63 @@
 .calculator {
+    position: relative;
+    z-index: 1;
     width: 300px;
-    margin: 0 auto;
+    margin: 2rem auto;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    letter-spacing: .25rem;
+
+    @mixin atMedium {
+        margin: 5rem auto;
+    }
+
+    @mixin atLarge {
+        margin: 8rem auto;
+    }
 
     &__screen {
-        height: 100px;
-        border: 2px solid #000;
+        height: 125px;
+        overflow: auto;
+        border: 1px solid $mainWhite;
+        border-bottom: none;
+        font-size: 2rem;
+        color: $mainWhite;
 
         &-content {
             float: right;
             margin: 5px 15px;
-            font-size: 2rem;
         }
     }
 
-    &__btns {
+    &__btn-container {
+        display: flex;
+        flex-wrap: wrap;
+        align-content: start;
+        justify-content: center;
+        height: 320px;
+        margin: 0 auto;
+        font-size: 1.5rem;
+    }
 
-        & button {
-            width: 80px;
-            height: 40px;
-            margin: 5px 8px;
+    &__history {
+        color: #fff;
+        
+        &-title {
+            letter-spacing: 0;
+            font-weight: 300;
+            border-bottom: 1px solid $mainWhite;
+            margin-bottom: 0;
+        }
+
+        &-list {
+            list-style: none;
+            font-size: 1.5rem;
+            padding: 0;
+            margin-top: 0;
+
+            & li {
+                margin: 10px 10px;
+            }
         }
     }
 }
