--- a/projects/calculator/src/styles/styles.css
+++ b/projects/calculator/src/styles/styles.css
@@ -1,4 +1,7 @@
 @import "normalize.css";
+@import "base/_variables";
 @import "base/_global";
-@import "modules/_header";
+@import "base/_mixins";
 @import "modules/_calculator";
+@import "modules/_btn";
+@import "modules/_canvas";
